# event_board_itorum

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tests_coverage_report.txt
config/: settings.py  urls.py
events/: admin.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_initial.py  0003_alter_booking_user_alter_rating_user.py  0004_alter_booking_user_alter_rating_user.py  0005_alter_event_organizer.py  0006_alter_event_organizer.py
notifications/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_initial.py  0003_alter_notification_event_alter_notification_user.py  0004_alter_notification_event.py
tests/: test_events.py  test_notifications.py
users/: admin.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_city_and_more.py
